<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="description_post_like" translatable="false">Like!</string>
    <string name="description_post_reposts" translatable="false">Repost!</string>
    <string name="description_post_view" translatable="false">View!</string>
    <string name="menu_remove">Удалить</string>
    <string name="menu_edit" translatable="false">Изменить</string>
    <string name="menu_save" translatable="false">Сохранить</string>
    <string name="post_text" translatable="false">text post</string>
    <string name="post_edit_text" translatable="false">Edit massage</string>
    <string name="error_empty_content" translatable="false">Нет текста поста</string>
    <string name="post_cancel" translatable="false">Отмена</string>
    <string name="post_edit" translatable="false">Изменить</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="add_post" translatable="false">Добавить пост</string>>

</resources>