<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/indent"
    tools:context=".activity.MainActivity">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/description_post_author_avatar"
        android:padding="8dp"
        android:src="@drawable/ic_netology_48dp"
        app:layout_constraintBottom_toBottomOf="@+id/barrierTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.MenuCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent"
        android:autoLink="web"
        android:paddingBottom="@dimen/indent"
        app:layout_constraintBottom_toTopOf="@id/barrierBottom"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likesImage"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/repostsImage"
        style="@style/Widget.AppTheme.ShareCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_reposts"
        app:layout_constraintStart_toEndOf="@id/likesImage"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom" />

    <ImageButton
        android:id="@+id/viewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="@dimen/indent8"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_view"
        android:src="@drawable/ic_launcher_view1_foreground"
        app:layout_constraintEnd_toStartOf="@id/viewText"
        app:layout_constraintStart_toEndOf="@id/repostsImage"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom" />

    <TextView
        android:id="@+id/viewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/indent8"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@id/viewImage"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintTop_toTopOf="@id/viewImage"
        tools:text="@sample/posts.json/reactions/view" />

    <View
        android:id="@+id/video_banner"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="68dp"
        android:background="@mipmap/ic_launcher_video45_foreground"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:layout_editor_absoluteX="-4dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play_Click_Video"
        style="@style/Widget.AppTheme.PlayCheckBox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="@id/video_banner"
        app:layout_constraintBottom_toBottomOf="@id/video_banner"
        app:layout_constraintStart_toStartOf="@id/video_banner"
        app:layout_constraintEnd_toEndOf="@id/video_banner"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/video_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="video_banner, play_Click_Video"/>

</androidx.constraintlayout.widget.ConstraintLayout>